--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background: #f5f5f5;
 }
 
 code {
@@ -16,38 +17,132 @@ code {
 }
 
 .home .sidebar {
-    width: 30%;
-    background: #d7f2ff;
+    max-width: 20% !important;
+    background: #fff;
     height: auto;
+    padding: 0;
+    box-shadow: 1px 1px 4px 2px #e5e7ee;
+    position: relative;
+}
+
+.home .sidebar ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex: 1;
+    padding-top: 30px;
+}
+
+.sidebar ul li img {
+    width: 25px;
+    margin-right: 15px;
 }
 
 .home .content {
-    padding: 20px 30px;
-    background: #c0d7e2;
+    padding: 0px 0 40px;
+    background: none;
+    max-width: 80% !important;
+    flex: 80%;
+}
+
+.Dashboard .bread {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    min-height: 122px;
+    justify-content: center;
+    padding: 0 30px;
+}
+
+.Dashboard ul.breadcrumb {
+    align-items: center;
+    background: none;
+    padding-bottom: 0;
+    padding-left: 0px;
+    margin-bottom: 7px;
+}
+
+.Dashboard ul.breadcrumb li {
+    margin: 0 40px 0 0;
+    position: relative;
+    padding-right: 0px;
+    color: #5d5d5d;
+}
+
+.Dashboard ul.breadcrumb li:after {
+    position: absolute;
+    content: '';
+    right: -22px;
+    top: 6px;
+    width: 8px;
+    height: 15px;
+    background: url(../images/arrow.png) no-repeat;
+    background-size: 100%;
+}
+
+.Dashboard ul.breadcrumb li:last-child:after {
+    content: none;
+}
+
+.Dashboard h3 {
+    font-size: 21px;
+    color: #000;
+    font-weight: 400;
+}
+
+.inner-section {
+    border-radius: 5px;
+    box-shadow: 0 2px 10px 0 #e5e7ee;
+    background-color: #ffffff;
+    padding: 40px;
+    margin: 40px 130px;
+}
+
+.form-section {
+    padding-top: 20px;
 }
 
 .about {
     height: calc(93vh - 76px);
-    background: #d1dcd5;
-    padding: 35px 82px;
+}
+
+.about .banner-about {
+    height: 280px;
+}
+
+.about .banner-about img {
+    width: 100%;
+    height: 330px;
+    object-fit: cover;
+}
+
+.about .card {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 5px;
+    padding: 15px 10px;
+    font-size: 14px;
+    max-width: 24% !important;
+}
+
+.card-img img {
+    width: 30%;
 }
 
 .services {
     height: calc(93vh - 76px);
-    background: #efeee4;
-    padding: 35px 82px;
+    padding: 35px 25px;
 }
 
 .product {
     height: calc(93vh - 76px);
-    background: #e9efe0;
-    padding: 35px 82px;
+    padding: 35px 25px;
 }
 
 .contact {
     height: calc(93vh - 76px);
-    background: #e4ead6;
-    padding: 35px 82px;
+    padding: 35px 25px;
 }
 
 .footer {
